--- a/.github/workflows/Packages-AutoBuild.yml
+++ b/.github/workflows/Packages-AutoBuild.yml
@@ -62,6 +62,8 @@ jobs:
             echo "MTARGET=mipsel_24kc" >> $GITHUB_ENV
         elif [ ${{matrix.target}} == "x86_64" ]; then
             echo "MTARGET=x86_64" >> $GITHUB_ENV
+        elif [ ${{matrix.target}} == "cortex-a53" ]; then
+            echo "MTARGET=cortex-a53" >> $GITHUB_ENV
         else
             echo "MTARGET=aarch64_generic" >> $GITHUB_ENV
         fi
@@ -79,6 +81,8 @@ jobs:
             wget -cO sdk.tar.xz https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/ramips/mt7621/openwrt-sdk-21.02-SNAPSHOT-ramips-mt7621_gcc-8.4.0_musl.Linux-x86_64.tar.xz
         elif [ ${{matrix.target}} == "x86_64" ]; then
             wget -cO sdk.tar.xz https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/x86/64/openwrt-sdk-21.02-SNAPSHOT-x86-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
+        elif [ ${{matrix.target}} == "cortex-a53" ]; then
+            wget -cO sdk.tar.xz https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/armvirt/64/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
         else
             wget -cO sdk.tar.xz https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/rockchip/armv8/openwrt-sdk-21.02-SNAPSHOT-rockchip-armv8_gcc-8.4.0_musl.Linux-x86_64.tar.xz
         fi
