--- a/.github/workflows/repo-dispatcher.yml
+++ b/.github/workflows/repo-dispatcher.yml
@@ -60,4 +60,9 @@ jobs:
         -X POST https://api.github.com/repos/${{ github.repository }}/dispatches \
         -H "Accept: application/vnd.github.everest-preview+json" \
         -H "Authorization: token ${{ secrets.REPO_TOKEN }}" \
+        -d '{"event_type": "cortex-a53 ${{ env.SSH }}", "client_payload": {"target": "cortex-a53"}}'
+        curl \
+        -X POST https://api.github.com/repos/${{ github.repository }}/dispatches \
+        -H "Accept: application/vnd.github.everest-preview+json" \
+        -H "Authorization: token ${{ secrets.REPO_TOKEN }}" \
         -d '{"event_type": "mipsel ${{ env.SSH }}", "client_payload": {"target": "redmi-ac2100"}}'
