--- a/.github/workflows/Packages-AutoBuild.yml
+++ b/.github/workflows/Packages-AutoBuild.yml
@@ -54,7 +54,7 @@ jobs:
         elif [ ${{matrix.target}} == "cortex-a53" ]; then
             echo "MTARGET=cortex-a53" >> $GITHUB_ENV
         else
-            echo "MTARGET=aarch64_generic" >> $GITHUB_ENV
+            echo "MTARGET=cortex-a53" >> $GITHUB_ENV
         fi
 
     - name: Get current date
@@ -73,7 +73,7 @@ jobs:
         elif [ ${{matrix.target}} == "cortex-a53" ]; then
             wget -cO sdk.tar.xz https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/armvirt/64/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
         else
-            wget -cO sdk.tar.xz https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/rockchip/armv8/openwrt-sdk-21.02-SNAPSHOT-rockchip-armv8_gcc-8.4.0_musl.Linux-x86_64.tar.xz
+            wget -cO sdk.tar.xz https://downloads.openwrt.org/releases/21.02-SNAPSHOT/targets/armvirt/64/openwrt-sdk-armvirt-64_gcc-8.4.0_musl.Linux-x86_64.tar.xz
         fi
         mkdir openwrt
         svn co https://github.com/garypang13/packages-compile/trunk/devices openwrt/devices
@@ -184,4 +184,4 @@ jobs:
         keep_latest: 15
         delete_tags: true
       env:
-        GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
